--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,11 @@
     ],
     "require": {
         "composer/installers": "^1.9",
+        "cweagans/composer-patches": "^1.7",
         "drupal/core-composer-scaffold": "^10",
         "drupal/core-recommended": "^10",
         "drupal/honeypot": "^2.1",
-        "drupal/key": "1.x-dev#2c580e6",
+        "drupal/key": "1.16.0",
         "drupal/metatag": "^1.22",
         "drupal/pathauto": "^1.11",
         "drupal/redirect": "^1.8",
@@ -34,7 +35,8 @@
             "composer/installers": true,
             "drupal/core-composer-scaffold": true,
             "drupal/core-project-message": true,
-            "dealerdirect/phpcodesniffer-composer-installer": true
+            "dealerdirect/phpcodesniffer-composer-installer": true,
+            "cweagans/composer-patches": true
         },
         "sort-packages": true
     },
@@ -72,6 +74,11 @@
             "web/themes/custom/{$name}": [
                 "type:drupal-custom-theme"
             ]
+        },
+        "patches": {
+            "drupal/key": {
+                "3278542 - Update $logger definition to be compatible with Drupal 10": "https://git.drupalcode.org/project/key/-/commit/2c580e6.diff"
+            }
         }
     },
     "scripts": {
