Add post-deploy composer scipt

--- a/composer.json
+++ b/composer.json
@@ -89,6 +89,14 @@
         "quickstart": [
             "composer run-script connect-empty-sqlite-db",
             "composer run-script install-from-config"
+        ],
+        "post-deploy": [
+            "./vendor/bin/drush cache:rebuild",
+            "./vendor/bin/drush config:import --yes",
+            "./vendor/bin/drush cache:rebuild",
+            "./vendor/bin/drush updatedb --yes",
+            "./vendor/bin/drush cache:rebuild",
+            "./vendor/bin/drush cron"
         ]
     }
 }
