--- a/.do/app.yml
+++ b/.do/app.yml
@@ -32,7 +32,7 @@ services:
         scope: RUN_AND_BUILD_TIME
         value: defaultdb
     github:
-      branch: digo
+      branch: main
       deploy_on_push: true
       repo: balsama/bdb.com
     http_port: 8080
