--- a/.do/app.yml
+++ b/.do/app.yml
@@ -32,7 +32,7 @@ services:
         scope: RUN_AND_BUILD_TIME
         value: defaultdb
     github:
-      branch: main
+      branch: post-deploy
       deploy_on_push: true
       repo: balsama/bdb.com
     http_port: 8080
@@ -43,3 +43,7 @@ services:
       - path: /
     run_command: vendor/bin/heroku-php-apache2 web/
     source_dir: /
+jobs:
+  - name: config-import
+    run_command: composer run-command post-deploy
+    kind: POST_DEPLOY
