--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     "require": {
         "composer/installers": "^1.9",
         "cweagans/composer-patches": "^1.7",
+        "drupal/config_split": "^2",
         "drupal/core-composer-scaffold": "^10",
         "drupal/core-recommended": "^10",
         "drupal/honeypot": "^2.1",
@@ -22,6 +23,7 @@
         "drupal/redirect": "^1.8",
         "drupal/riddler": "^2.0",
         "drupal/simple_sitemap": "^4.1",
+        "drupal/smtp": "^1.2",
         "drush/drush": "^11.3",
         "squizlabs/php_codesniffer": "^3.7"
     },
