--- a/config/sync/default/core.extension.yml
+++ b/config/sync/default/core.extension.yml
@@ -9,6 +9,7 @@ module:
   ckeditor5: 0
   comment: 0
   config: 0
+  config_split: 0
   contact: 0
   contextual: 0
   datetime: 0
@@ -16,7 +17,6 @@ module:
   dynamic_page_cache: 0
   editor: 0
   field: 0
-  field_ui: 0
   file: 0
   filter: 0
   help: 0
@@ -33,6 +33,7 @@ module:
   path: 0
   path_alias: 0
   search: 0
+  smtp: 0
   sqlite: 0
   system: 0
   taxonomy: 0
