--- a/composer.json
+++ b/composer.json
@@ -94,7 +94,7 @@
         ],
         "post-deploy": [
             "./vendor/bin/drush cache:rebuild",
-            "./vendor/bin/drush config:import --yes",
+            "./vendor/bin/drush config-split:import prod --yes",
             "./vendor/bin/drush cache:rebuild",
             "./vendor/bin/drush updatedb --yes",
             "./vendor/bin/drush cache:rebuild",
