--- a/config/sync/default/key.key.basic_site_settings_email.yml
+++ b/config/sync/default/key.key.basic_site_settings_email.yml
@@ -3,13 +3,13 @@ langcode: en
 status: true
 dependencies: {  }
 id: basic_site_settings_email
-label: 'Basic Site Settings Email'
+label: SITE_EMAIL
 description: 'Email address stored in Basic Site Settings'
 key_type: authentication
 key_type_settings: {  }
 key_provider: file
 key_provider_settings:
-  file_location: ../keys/site-settings.keys
-  strip_line_breaks: false
+  file_location: ../keys/SITE_EMAIL.keys
+  strip_line_breaks: true
 key_input: none
 key_input_settings: {  }
