--- a/config/sync/default/key.key.smtp_auth_password.yml
+++ b/config/sync/default/key.key.smtp_auth_password.yml
@@ -3,13 +3,13 @@ langcode: en
 status: true
 dependencies: {  }
 id: smtp_auth_password
-label: 'SMTP Auth Password'
+label: SMTP_PASSWORD
 description: 'password for gmail smtp auth'
 key_type: authentication
 key_type_settings: {  }
 key_provider: file
 key_provider_settings:
-  file_location: ../keys/smtp-password.keys
-  strip_line_breaks: false
+  file_location: ../keys/SMTP_PASSWORD.keys
+  strip_line_breaks: true
 key_input: none
 key_input_settings: {  }
