--- a/composer.json
+++ b/composer.json
@@ -100,6 +100,7 @@
             "./vendor/bin/drush cache:rebuild",
             "./vendor/bin/drush cron"
         ],
-        "set-secrets": "php ./scripts/create-keys-files.php"
+        "set-secrets": "php ./scripts/create-keys-files.php",
+        "post-install-cmd": "composer run-script set-secrets"
     }
 }
