--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "drupal/pathauto": "^1.11",
         "drupal/redirect": "^1.8",
         "drupal/riddler": "^2.0",
+        "drupal/s3fs": "^3.0",
         "drupal/simple_sitemap": "^4.1",
         "drupal/smtp": "^1.2",
         "drush/drush": "^11.3",
