--- a/config/sync/default/config_split.config_split.local.yml
+++ b/config/sync/default/config_split.config_split.local.yml
@@ -9,8 +9,7 @@ weight: 0
 stackable: false
 storage: folder
 folder: ../config/sync/local
-module:
-  field_ui: 0
+module: {  }
 theme: {  }
 complete_list: {  }
 partial_list: {  }
