--- a/config/sync/default/config_split.config_split.prod.yml
+++ b/config/sync/default/config_split.config_split.prod.yml
@@ -9,7 +9,8 @@ weight: 0
 stackable: false
 storage: folder
 folder: ../config/sync/prod
-module: {  }
+module:
+  field_ui: 0
 theme: {  }
 complete_list: {  }
 partial_list: {  }
