Add Events and Registration custom entities (#11)
* Add Event entity

* Update ERD

* Add registraion

* 👃

--- a/config/sync/default/core.extension.yml
+++ b/config/sync/default/core.extension.yml
@@ -16,7 +16,9 @@ module:
   dblog: 0
   dynamic_page_cache: 0
   editor: 0
+  event: 0
   field: 0
+  field_ui: 0
   file: 0
   filter: 0
   help: 0
@@ -32,6 +34,7 @@ module:
   page_cache: 0
   path: 0
   path_alias: 0
+  registration: 0
   s3fs: 0
   search: 0
   smtp: 0
