--- a/web/modules/custom/event/event.info.yml
+++ b/web/modules/custom/event/event.info.yml
@@ -4,4 +4,6 @@ package: Custom
 type: module
 dependencies:
   - drupal:datetime
+  - drupal:editor
+  - drupal:filter
 core_version_requirement: ^10
