WIP event registration

--- a/web/modules/custom/registration/registration.routing.yml
+++ b/web/modules/custom/registration/registration.routing.yml
@@ -5,3 +5,10 @@ entity.registration.settings:
     _title: 'Registration'
   requirements:
     _permission: 'administer registration'
+anon.registration:
+  path: 'create-account-pre-register'
+  defaults:
+    _controller: '\Drupal\registration\Controller\PreregisterController::content'
+    _title: 'Create Account'
+  requirements:
+    _permission: 'access content'
