--- a/config/sync/default/core.entity_view_display.user.user.default.yml
+++ b/config/sync/default/core.entity_view_display.user.user.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.user.user.field_registrations
     - field.field.user.user.user_picture
     - image.style.thumbnail
   module:
@@ -15,7 +16,18 @@ targetEntityType: user
 bundle: user
 mode: default
 content:
+  field_registrations:
+    type: entity_reference_entity_view
+    label: above
+    settings:
+      view_mode: default
+      link: true
+    third_party_settings: {  }
+    weight: 6
+    region: content
   member_for:
+    settings: {  }
+    third_party_settings: {  }
     weight: 5
     region: content
   user_picture:
