--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "drupal/key": "1.16.0",
         "drupal/metatag": "^1.22",
         "drupal/pathauto": "^1.11",
+        "drupal/readonly_field_widget": "^1.5",
         "drupal/redirect": "^1.8",
         "drupal/riddler": "^2.0",
         "drupal/s3fs": "^3.0",
