--- a/config/sync/default/core.extension.yml
+++ b/config/sync/default/core.extension.yml
@@ -2,6 +2,7 @@ _core:
   default_config_hash: R4IF-ClDHXxblLcG0L7MgsLvfBIMAvi_skumNFQwkDc
 module:
   automated_cron: 0
+  bdb_content: 0
   big_pipe: 0
   block: 0
   block_content: 0
@@ -24,6 +25,7 @@ module:
   help: 0
   history: 0
   image: 0
+  inline_entity_form: 0
   key: 0
   link: 0
   menu_link_content: 0
@@ -34,6 +36,7 @@ module:
   page_cache: 0
   path: 0
   path_alias: 0
+  readonly_field_widget: 0
   registration: 0
   s3fs: 0
   search: 0
