--- a/config/sync/default/olivero.settings.yml
+++ b/config/sync/default/olivero.settings.yml
@@ -8,7 +8,7 @@ features:
   comment_user_picture: true
   comment_user_verification: true
   favicon: true
-  node_user_picture: false
+  node_user_picture: true
 logo:
   path: themes/icons/logo-circle.png
   use_default: false
@@ -16,5 +16,5 @@ third_party_settings:
   shortcut:
     module_link: true
 mobile_menu_all_widths: 0
-site_branding_bg_color: white
-base_primary_color: '#1b9ae4'
+site_branding_bg_color: gray
+base_primary_color: '#fb4e42'
