--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,11 @@
         "drupal/core-composer-scaffold": "^10",
         "drupal/core-recommended": "^10",
         "drupal/honeypot": "^2.1",
+        "drupal/inline_entity_form": "^1.0@RC",
         "drupal/key": "1.16.0",
         "drupal/metatag": "^1.22",
         "drupal/pathauto": "^1.11",
+        "drupal/readonly_field_widget": "^1.5",
         "drupal/redirect": "^1.8",
         "drupal/riddler": "^2.0",
         "drupal/s3fs": "^3.0",
