--- a/config/sync/default/core.entity_view_display.user.user.default.yml
+++ b/config/sync/default/core.entity_view_display.user.user.default.yml
@@ -16,7 +16,9 @@ bundle: user
 mode: default
 content:
   member_for:
-    weight: 5
+    settings: {  }
+    third_party_settings: {  }
+    weight: 1
     region: content
   user_picture:
     type: image
