--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "drupal/s3fs": "^3.0",
         "drupal/simple_sitemap": "^4.1",
         "drupal/smtp": "^1.2",
+        "drupal/webform": "^6.1",
         "drush/drush": "^11.3",
         "squizlabs/php_codesniffer": "^3.7"
     },
