--- a/config/sync/default/field.field.user.user.user_picture.yml
+++ b/config/sync/default/field.field.user.user.user_picture.yml
@@ -22,7 +22,7 @@ default_value_callback: ''
 settings:
   handler: 'default:file'
   handler_settings: {  }
-  file_directory: 'pictures/[date:custom:Y]-[date:custom:m]'
+  file_directory: pictures
   file_extensions: 'png gif jpg jpeg'
   max_filesize: ''
   max_resolution: ''
