--- a/web/modules/custom/registration/registration.routing.yml
+++ b/web/modules/custom/registration/registration.routing.yml
@@ -12,3 +12,10 @@ entity.registration.canonical:
     _title: 'Event Registration'
   requirements:
     _permission: 'access content'
+entity.registration.access_denied:
+  path: 'registration/add/access-denied'
+  defaults:
+    _controller: '\Drupal\registration\Controller\RegistrationAccessDeniedController::content'
+    _title: 'You need to be logged in to do that'
+  requirements:
+    _permission: 'access content'
