Custom catch-all 403 page redirect

--- a/web/modules/custom/registration/registration.routing.yml
+++ b/web/modules/custom/registration/registration.routing.yml
@@ -16,6 +16,6 @@ entity.registration.access_denied:
   path: 'registration/add/access-denied'
   defaults:
     _controller: '\Drupal\registration\Controller\RegistrationAccessDeniedController::content'
-    _title: 'You need to be logged in to do that'
+    _title: 'Sign up and Register'
   requirements:
     _permission: 'access content'
