--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,12 @@
         "drupal/honeypot": "^2.1",
         "drupal/inline_entity_form": "^1.0@RC",
         "drupal/key": "1.16.0",
+        "drupal/mail_login": "^2.6",
         "drupal/metatag": "^1.22",
         "drupal/pathauto": "^1.11",
         "drupal/readonly_field_widget": "^1.5",
+        "drupal/recaptcha_v3": "^1.7",
         "drupal/redirect": "^1.8",
-        "drupal/riddler": "^2.0",
         "drupal/s3fs": "^3.0",
         "drupal/simple_sitemap": "^4.1",
         "drupal/smtp": "^1.2",
