--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "drupal/metatag": "^1.22",
         "drupal/pathauto": "^1.11",
         "drupal/readonly_field_widget": "^1.5",
+        "drupal/recaptcha": "^3.1",
         "drupal/recaptcha_v3": "^1.7",
         "drupal/redirect": "^1.8",
         "drupal/s3fs": "^3.0",
