--- a/config/sync/default/recaptcha_v3.settings.yml
+++ b/config/sync/default/recaptcha_v3.settings.yml
@@ -3,6 +3,6 @@ _core:
 site_key: 6Ld9L4MjAAAAAD1ewV_LD9o0tb-L7o3jVcWA-UkO
 secret_key: null
 verify_hostname: true
-default_challenge: captcha/Math
+default_challenge: recaptcha/reCAPTCHA
 error_message: 'Antibot verification failed.'
 cacheable: false
