--- a/config/sync/default/olivero.settings.yml
+++ b/config/sync/default/olivero.settings.yml
@@ -16,5 +16,5 @@ third_party_settings:
   shortcut:
     module_link: true
 mobile_menu_all_widths: 0
-site_branding_bg_color: gray
+site_branding_bg_color: white
 base_primary_color: '#fb4e42'
