--- a/composer.json
+++ b/composer.json
@@ -99,6 +99,10 @@
             "composer run-script connect-empty-sqlite-db",
             "composer run-script install-from-config"
         ],
+        "upgrade-test": [
+            "composer run-script @connect-fixture-sqlite-db",
+            "composer run-script @post-install-cmd"
+        ],
         "post-deploy": [
             "./vendor/bin/drush cache:rebuild",
             "./vendor/bin/drush config:import --yes",
