--- a/config/sync/default/contact.form.feedback.yml
+++ b/config/sync/default/contact.form.feedback.yml
@@ -10,5 +10,5 @@ recipients:
   - info@bigdayboston.com
 reply: ''
 weight: 0
-message: 'Your message has been sent.'
+message: 'Thanks! Your message has been sent.'
 redirect: /event/1
