--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "drupal/config_split": "^2",
         "drupal/core-composer-scaffold": "^10",
         "drupal/core-recommended": "^10",
+        "drupal/google_analytics": "^4.0",
         "drupal/honeypot": "^2.1",
         "drupal/inline_entity_form": "^1.0@RC",
         "drupal/key": "1.16.0",
