--- a/config/sync/default/user.role.authenticated.yml
+++ b/config/sync/default/user.role.authenticated.yml
@@ -6,6 +6,7 @@ dependencies:
     - comment
     - contact
     - event
+    - google_analytics
     - registration
     - search
     - system
@@ -20,6 +21,7 @@ permissions:
   - 'access content'
   - 'access site-wide contact form'
   - 'create registration'
+  - 'opt-in or out of google analytics tracking'
   - 'post comments'
   - 'search content'
   - 'skip comment approval'
