--- a/config/sync/default/core.extension.yml
+++ b/config/sync/default/core.extension.yml
@@ -33,6 +33,8 @@ module:
   mail_login: 0
   menu_link_content: 0
   menu_ui: 0
+  metatag: 0
+  metatag_twitter_cards: 0
   mysql: 0
   node: 0
   options: 0
@@ -50,6 +52,7 @@ module:
   system: 0
   taxonomy: 0
   text: 0
+  token: 0
   toolbar: 0
   tour: 0
   update: 0
