--- a/config/sync/default/core.entity_view_display.event.event.default.yml
+++ b/config/sync/default/core.entity_view_display.event.event.default.yml
@@ -24,14 +24,14 @@ content:
     region: content
   field_event_description:
     type: text_default
-    label: above
+    label: hidden
     settings: {  }
     third_party_settings: {  }
     weight: 6
     region: content
   label:
     type: string
-    label: above
+    label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
