--- a/config/sync/default/config_split.config_split.prod.yml
+++ b/config/sync/default/config_split.config_split.prod.yml
@@ -12,5 +12,6 @@ folder: ../config/sync/prod
 module:
   field_ui: 0
 theme: {  }
-complete_list: {  }
+complete_list:
+  - system.performance
 partial_list: {  }
