--- a/config/sync/default/editor.editor.full_html.yml
+++ b/config/sync/default/editor.editor.full_html.yml
@@ -14,6 +14,16 @@ settings:
       - heading
       - bold
       - italic
+      - blockQuote
+      - '|'
+      - bulletedList
+      - numberedList
+      - indent
+      - outdent
+      - '|'
+      - link
+      - '|'
+      - drupalInsertImage
   plugins:
     ckeditor5_heading:
       enabled_headings:
@@ -22,4 +32,16 @@ settings:
         - heading4
         - heading5
         - heading6
-image_upload: {  }
+    ckeditor5_imageResize:
+      allow_resize: true
+    ckeditor5_list:
+      reversed: true
+      startIndex: true
+image_upload:
+  status: true
+  scheme: s3
+  directory: inline-images
+  max_size: ''
+  max_dimensions:
+    width: 0
+    height: 0
