Split performance config

--- a/config/sync/default/config_split.config_split.local.yml
+++ b/config/sync/default/config_split.config_split.local.yml
@@ -11,5 +11,6 @@ storage: folder
 folder: ../config/sync/local
 module: {  }
 theme: {  }
-complete_list: {  }
+complete_list:
+  - system.performance
 partial_list: {  }
