Re-place blocks

--- a/config/sync/default/block.block.views_block__event_registrations_block_1.yml
+++ b/config/sync/default/block.block.views_block__event_registrations_block_1.yml
@@ -9,6 +9,7 @@ dependencies:
     - views
   theme:
     - olivero
+    - bdb
 id: views_block__event_registrations_block_1
 theme: olivero
 region: content
