--- a/config/sync/default/core.extension.yml
+++ b/config/sync/default/core.extension.yml
@@ -47,6 +47,8 @@ module:
   registration: 0
   s3fs: 0
   search: 0
+  simple_sitemap: 0
+  simple_sitemap_engines: 0
   smtp: 0
   sqlite: 0
   system: 0
