--- a/config/sync/default/block.block.views_block__my_registrations_block_1_2.yml
+++ b/config/sync/default/block.block.views_block__my_registrations_block_1_2.yml
@@ -12,7 +12,7 @@ dependencies:
     - olivero
     - bdb
 id: views_block__my_registrations_block_1_2
-theme: olivero
+theme: bdb
 region: content
 weight: -7
 provider: null
