Customizable twitter image for Basic Pages

--- a/config/sync/default/core.entity_form_display.node.page.default.yml
+++ b/config/sync/default/core.entity_form_display.node.page.default.yml
@@ -4,8 +4,11 @@ status: true
 dependencies:
   config:
     - field.field.node.page.body
+    - field.field.node.page.field_image
+    - image.style.thumbnail
     - node.type.page
   module:
+    - image
     - path
     - text
 _core:
@@ -31,6 +34,14 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_image:
+    type: image_image
+    weight: 131
+    region: content
+    settings:
+      progress_indicator: throbber
+      preview_image_style: thumbnail
+    third_party_settings: {  }
   path:
     type: path
     weight: 30
@@ -43,6 +54,16 @@ content:
     region: content
     settings:
       display_label: true
+    third_party_settings: {  }
+  simple_sitemap:
+    weight: 10
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  simple_sitemap_index_now:
+    weight: 130
+    region: content
+    settings: {  }
     third_party_settings: {  }
   status:
     type: boolean_checkbox
