--- a/config/sync/default/metatag.metatag_defaults.node.yml
+++ b/config/sync/default/metatag.metatag_defaults.node.yml
@@ -7,6 +7,10 @@ _core:
 id: node
 label: Content
 tags:
-  title: '[node:title] | [site:name]'
-  description: '[node:summary]'
   canonical_url: '[node:url]'
+  description: '[node:summary]'
+  title: '[node:title] | [site:name]'
+  twitter_cards_description: '[node:body]'
+  twitter_cards_image: 'https://bigdayboston.com/themes/icons/logo-circle.png'
+  twitter_cards_site: '@bigdayboston'
+  twitter_cards_type: summary_large_image
