--- a/config/sync/default/mail_login.settings.yml
+++ b/config/sync/default/mail_login.settings.yml
@@ -1,6 +1,7 @@
 _core:
   default_config_hash: '-KUHvK41874dR8ws5xDInaInXrYYenLc9pRyKirSJUg'
 mail_login_enabled: 1
+mail_login_case_sensitive: 0
 mail_login_email_only: 0
 mail_login_override_login_labels: 1
 mail_login_username_title: 'Login by username or email address'
