--- a/config/sync/default/views.view.people_details.yml
+++ b/config/sync/default/views.view.people_details.yml
@@ -2,7 +2,10 @@ uuid: de3d3148-49a8-4484-9c75-9f80770d7fae
 langcode: en
 status: true
 dependencies:
+  config:
+    - field.storage.registration.field_event
   module:
+    - registration
     - user
 _core:
   default_config_hash: njaZigMvB4ap21Fg_tQcJhWgYJCGNi49Z5rRL_N6RI0
@@ -22,56 +25,6 @@ display:
     display_options:
       title: People
       fields:
-        user_bulk_form:
-          id: user_bulk_form
-          table: users
-          field: user_bulk_form
-          relationship: none
-          group_type: group
-          admin_label: ''
-          entity_type: user
-          plugin_id: user_bulk_form
-          label: 'Bulk update'
-          exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: true
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
         name:
           id: name
           table: users_field_data
@@ -83,7 +36,7 @@ display:
           entity_field: name
           plugin_id: field
           label: Username
-          exclude: false
+          exclude: true
           alter:
             alter_text: false
             text: ''
@@ -123,7 +76,20 @@ display:
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
+          click_sort_column: value
           type: user_name
+          settings:
+            link_to_entity: true
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
         status:
           id: status
           table: users_field_data
@@ -135,7 +101,7 @@ display:
           entity_field: status
           plugin_id: field
           label: Status
-          exclude: false
+          exclude: true
           alter:
             alter_text: false
             text: ''
@@ -175,11 +141,22 @@ display:
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
+          click_sort_column: value
           type: boolean
           settings:
             format: custom
             format_custom_false: Blocked
             format_custom_true: Active
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
         roles_target_id:
           id: roles_target_id
           table: user__roles
@@ -189,7 +166,7 @@ display:
           admin_label: ''
           plugin_id: user_roles
           label: Roles
-          exclude: false
+          exclude: true
           alter:
             alter_text: false
             text: ''
@@ -242,7 +219,7 @@ display:
           entity_field: created
           plugin_id: field
           label: 'Member for'
-          exclude: false
+          exclude: true
           alter:
             alter_text: false
             text: ''
@@ -282,11 +259,22 @@ display:
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
+          click_sort_column: value
           type: timestamp_ago
           settings:
             future_format: '@interval'
             past_format: '@interval'
             granularity: 2
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
         access:
           id: access
           table: users_field_data
@@ -298,7 +286,7 @@ display:
           entity_field: access
           plugin_id: field
           label: 'Last access'
-          exclude: false
+          exclude: true
           alter:
             alter_text: false
             text: ''
@@ -338,11 +326,22 @@ display:
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
+          click_sort_column: value
           type: timestamp_ago
           settings:
             future_format: '@interval hence'
             past_format: '@interval ago'
             granularity: 2
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
         operations:
           id: operations
           table: users
@@ -353,7 +352,7 @@ display:
           entity_type: user
           plugin_id: entity_operations
           label: Operations
-          exclude: false
+          exclude: true
           alter:
             alter_text: false
             text: ''
@@ -404,8 +403,8 @@ display:
           entity_type: user
           entity_field: mail
           plugin_id: field
-          label: ''
-          exclude: true
+          label: Email
+          exclude: false
           alter:
             alter_text: false
             text: ''
@@ -458,11 +457,74 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
+        field_event:
+          id: field_event
+          table: registration__field_event
+          field: field_event
+          relationship: registration
+          group_type: group
+          admin_label: ''
+          plugin_id: field
+          label: Event
+          exclude: true
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: target_id
+          type: entity_reference_label
+          settings:
+            link: true
+          group_column: target_id
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
       pager:
         type: full
         options:
           offset: 0
-          items_per_page: 50
+          items_per_page: 0
           total_pages: 0
           id: 0
           tags:
@@ -784,6 +846,68 @@ display:
             default_group: All
             default_group_multiple: {  }
             group_items: {  }
+        field_event_target_id:
+          id: field_event_target_id
+          table: registration__field_event
+          field: field_event_target_id
+          relationship: registration
+          group_type: group
+          admin_label: ''
+          plugin_id: numeric
+          operator: '='
+          value:
+            min: ''
+            max: ''
+            value: ''
+          group: 1
+          exposed: true
+          expose:
+            operator_id: field_event_target_id_op
+            label: 'Event (field_event)'
+            description: ''
+            use_operator: false
+            operator: field_event_target_id_op
+            operator_limit_selection: false
+            operator_list: {  }
+            identifier: field_event_target_id
+            required: false
+            remember: false
+            multiple: true
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              content_editor: '0'
+              administrator: '0'
+              birder: '0'
+            min_placeholder: ''
+            max_placeholder: ''
+            placeholder: ''
+          is_grouped: true
+          group_info:
+            label: 'Event (field_event)'
+            description: ''
+            identifier: field_event_target_id
+            optional: true
+            widget: radios
+            multiple: true
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items:
+              1:
+                title: 'Big Day Boston 2023'
+                operator: '='
+                value:
+                  min: ''
+                  max: ''
+                  value: '1'
+              2:
+                title: None
+                operator: empty
+                value:
+                  min: ''
+                  max: ''
+                  value: ''
       filter_groups:
         operator: AND
         groups:
@@ -871,6 +995,17 @@ display:
           distinct: false
           replica: false
           query_tags: {  }
+      relationships:
+        registration:
+          id: registration
+          table: users_field_data
+          field: registration
+          relationship: none
+          group_type: group
+          admin_label: 'User registrations'
+          entity_type: user
+          plugin_id: standard
+          required: false
       css_class: ''
       use_ajax: false
       group_by: false
@@ -880,18 +1015,30 @@ display:
       use_more_text: more
       link_display: page_1
       link_url: ''
+      header:
+        result:
+          id: result
+          table: views
+          field: result
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: result
+          empty: false
+          content: 'Displaying @start - @end of @total'
       display_comment: ''
       hide_attachment_summary: false
       display_extenders: {  }
     cache_metadata:
-      max-age: 0
+      max-age: -1
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
         - url
         - url.query_args
         - user.permissions
-      tags: {  }
+      tags:
+        - 'config:field.storage.registration.field_event'
   page_1:
     id: page_1
     display_title: Page
@@ -917,11 +1064,12 @@ display:
         weight: 0
         menu_name: admin
     cache_metadata:
-      max-age: 0
+      max-age: -1
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
         - url
         - url.query_args
         - user.permissions
-      tags: {  }
+      tags:
+        - 'config:field.storage.registration.field_event'
