--- a/config/sync/default/smtp.settings.yml
+++ b/config/sync/default/smtp.settings.yml
@@ -7,7 +7,7 @@ smtp_port: '465'
 smtp_protocol: ssl
 smtp_autotls: true
 smtp_timeout: 30
-smtp_username: northendpage
+smtp_username: info@bigdayboston.com
 smtp_password: null
 smtp_from: info@bigdayboston.com
 smtp_fromname: 'Big Day Boston'
