--- a/config/sync/default/user.role.birder.yml
+++ b/config/sync/default/user.role.birder.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   module:
+    - file
     - registration
 id: birder
 label: Birder
@@ -10,3 +11,4 @@ weight: 4
 is_admin: null
 permissions:
   - 'create registration'
+  - 'delete own files'
