--- a/config/sync/default/core.entity_view_mode.recaptcha_v3_action.token.yml
+++ b/config/sync/default/core.entity_view_mode.recaptcha_v3_action.token.yml
@@ -6,5 +6,6 @@ dependencies:
     - recaptcha_v3
 id: recaptcha_v3_action.token
 label: Token
+description: ''
 targetEntityType: recaptcha_v3_action
 cache: true
