--- a/config/sync/default/core.entity_view_mode.registration.summary_event_name_only_.yml
+++ b/config/sync/default/core.entity_view_mode.registration.summary_event_name_only_.yml
@@ -6,5 +6,6 @@ dependencies:
     - registration
 id: registration.summary_event_name_only_
 label: 'Summary (Event name only)'
+description: ''
 targetEntityType: registration
 cache: true
