--- a/config/sync/default/core.entity_view_mode.registration.token.yml
+++ b/config/sync/default/core.entity_view_mode.registration.token.yml
@@ -6,5 +6,6 @@ dependencies:
     - registration
 id: registration.token
 label: Token
+description: ''
 targetEntityType: registration
 cache: true
