--- a/config/sync/default/editor.editor.full_html.yml
+++ b/config/sync/default/editor.editor.full_html.yml
@@ -35,8 +35,10 @@ settings:
     ckeditor5_imageResize:
       allow_resize: true
     ckeditor5_list:
-      reversed: true
-      startIndex: true
+      properties:
+        reversed: true
+        startIndex: true
+      multiBlock: true
 image_upload:
   status: true
   scheme: s3
