--- a/config/sync/default/mail_login.settings.yml
+++ b/config/sync/default/mail_login.settings.yml
@@ -12,3 +12,4 @@ mail_login_password_reset_username_title: 'Username or email address'
 mail_login_password_reset_username_description: 'Password reset instructions will be sent to your registered email address.'
 mail_login_password_reset_email_only_title: 'Email address'
 mail_login_password_reset_email_only_description: 'Password reset instructions will be sent to your registered email address.'
+mail_login_case_sensitive: 1
