--- a/config/sync/default/user.role.content_editor.yml
+++ b/config/sync/default/user.role.content_editor.yml
@@ -10,6 +10,7 @@ dependencies:
     - comment
     - contextual
     - file
+    - help
     - node
     - path
     - system
@@ -26,6 +27,7 @@ permissions:
   - 'access content overview'
   - 'access contextual links'
   - 'access files overview'
+  - 'access help pages'
   - 'access tour'
   - 'administer url aliases'
   - 'create article content'
@@ -34,6 +36,7 @@ permissions:
   - 'create url aliases'
   - 'delete article revisions'
   - 'delete own article content'
+  - 'delete own files'
   - 'delete own page content'
   - 'delete page revisions'
   - 'edit own article content'
