#3373921 - Add patch for GA install from config

--- a/composer.json
+++ b/composer.json
@@ -87,6 +87,9 @@
         "patches": {
             "drupal/key": {
                 "3278542 - Update $logger definition to be compatible with Drupal 10": "https://git.drupalcode.org/project/key/-/commit/2c580e6.diff"
+            },
+            "drupal/google_analytics": {
+                "3373921 - Cannot install from existing config": "https://git.drupalcode.org/project/google_analytics/-/merge_requests/33.diff"
             }
         }
     },
